--- a/app/views/permissions/_form.html.erb
+++ b/app/views/permissions/_form.html.erb
@@ -12,9 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :category %> :  <%= collection_select(:permission, :category_id, Category.all, :id, :name) %>
+
   </div>
+
+  <div class="field">
+    <%= f.label :name %> : <%= f.text_field :name %>
+  </div>
+
+
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
