More wiring, doing it the rails 3.0 way now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<div id="nav-bar">
+  <%= link_to 'Developers', developers_path %>
+  <%= link_to 'Organizations', organizations_path %>
+  &nbsp;&nbsp;|&nbsp;&nbsp;
+  <%= link_to 'Permissions', permissions_path %>
+</div>
 <%= yield %>
 
 </body>
