--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -15,6 +15,13 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+
+  <div class="field">
+      <%= f.label :developer %> :  <%= f.select :developer_ids, Developer.all.collect {|x| [x.name, x.id]}, {}, :multiple => true %>
+
+
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
