--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -6,5 +6,15 @@
 </p>
 
 
+<p>
+  <b> Developers: </b>
+  <%= @organization.developers %>
+</p>
+
+<p>
+  <b> Permissions: </b>
+  <%= @organization.permissions %>
+</p>
+
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
 <%= link_to 'Back', organizations_path %>
