--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -17,10 +17,12 @@
   </div>
 
   <div class="field">
-      <%= f.label :developer %> :  <%= f.select :developer_ids, Developer.all.collect {|x| [x.name, x.id]}, {}, :multiple => true %>
-
-
+      <%= f.label :developers %> :  <%= f.select :developer_ids, Developer.all.collect {|x| [x.name, x.id]}, {}, :multiple => true %>
   </div>
+
+    <div class="field">
+      <%= f.label :permissions %> :  <%= f.select :permission_ids, Permission.all.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
+    </div>
 
   <div class="actions">
     <%= f.submit %>
