--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -6,5 +6,14 @@
 </p>
 
 
+<p>
+  <b> Organization: </b>
+  <%= @developer.organization.name %>
+</p>
+
+<p>
+  <b> Permissions: </b>
+  <%= @developer.permissions.collect {|x| "#{x.category.name} - #{x.name}"} %>
+</p>
 <%= link_to 'Edit', edit_developer_path(@developer) %> |
 <%= link_to 'Back', developers_path %>
