Add sample data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <%= link_to 'Developers', developers_path %>
   <%= link_to 'Organizations', organizations_path %>
   &nbsp;&nbsp;|&nbsp;&nbsp;
+  <%= link_to 'Services', services_path %>
+  &nbsp;&nbsp;|&nbsp;&nbsp;
   <%= link_to 'Permissions', permissions_path %>
 </div>
 <%= yield %>
