--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -15,7 +15,12 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="actions">
+
+    <div class="field">
+      <%= f.label :permissions %> :  <%= f.select :permission_ids, Permission.all.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
+    </div>
+
+    <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
