--- a/app/views/developers/_form.html.erb
+++ b/app/views/developers/_form.html.erb
@@ -23,6 +23,10 @@
     <div class="field">
       <%= f.label :my_permissions %> :  <%= f.select :permission_ids, Permission.all.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
     </div>
+
+    <div class="field">
+      <%= f.label :my_restrictions %> :  <%= f.select :restriction_ids, Restriction.all.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
