--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+    <div class="field">
+      <%= f.label :allow_multiple %><br />
+      <%= f.check_box :allow_multiple %>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
