--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,6 +5,10 @@
   <%= @category.name %>
 </p>
 
+<p>
+  <b>Allow Multiples:</b>
+  <%= "#{@category.allow_multiple}" %>
+</p>
 
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
