--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -21,11 +21,26 @@
   </div>
 
     <div class="field">
-      <%= f.label :permissions %> :  <%= f.select :permission_ids, Permission.all.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
+      <%= f.label :permissions %>  :
+        <% Category.all.each do |category | %>
+            <div style="display:inline-block; text-align:center">
+              <%=category.name%><br/>
+              <%= f.select :permission_ids, category.permissions.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
+            </div>
+        <%end%>
+      </div>
+
     </div>
 
     <div class="field">
-      <%= f.label :restrictions %> :  <%= f.select :restriction_ids, Restriction.all.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
+      <%= f.label :restrictions %> :
+      <% Category.all.each do |category | %>
+          <div style="display:inline-block; text-align:center">
+            <%=category.name%><br/>
+            <%= f.select :restriction_ids, category.permissions.collect {|x| ["#{x.category.name} - #{x.restriction.name}", x.restriction.id]}, {}, :multiple => true %>
+          </div>
+      <%end%>
+
     </div>
   <div class="actions">
     <%= f.submit %>
