--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -17,7 +17,17 @@
   </div>
 
     <div class="field">
-      <%= f.label :permissions %> :  <%= f.select :permission_ids, Permission.all.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
+      <%= f.label :permissions %> :
+
+      <div>
+
+      <% Category.all.each do |category | %>
+          <div style="display:inline-block; text-align:center">
+            <%=category.name%><br/>
+            <%= f.select :permission_ids, category.permissions.collect {|x| ["#{x.category.name} - #{x.name}", x.id]}, {}, :multiple => true %>
+          </div>
+      <%end%>
+      </div>
     </div>
 
     <div class="actions">
