--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,14 @@
  *= require_self
  *= require_tree .
  */
+
+.service_tag {
+
+    background-color: blue;
+    color:white;
+    font-weight: bold;
+    padding: 2px 5px;
+    margin: 5px ;
+    display:inline;
+    border-radius: 4px;
+}
